syntax = "proto3";
import "Scene/ProtoSource/SceneEntity.proto";
package HS.Protobuf.Login;

enum LoginProtocl{
	LOGIN_PROTOCL_NONE = 0;
	LOGIN_PROTOCL_GET_LOGIN_TOKEN_REQ = 20001;
	LOGIN_PROTOCL_GET_LOGIN_TOKEN_RESP = 20002;
	LOGIN_PROTOCL_USER_REGISTER_REQUEST = 20003;
	LOGIN_PROTOCL_USER_REGISTER_RESPONSE = 20004;
	LOGIN_PROTOCL_USER_LOGIN_REQUEST = 20005;
	LOGIN_PROTOCL_USER_LOGIN_RESPONSE = 20006;
}

message GetLoginTokenRequest{
}
message GetLoginTokenResponse{
	string loginToken = 1;
}

//注册
message UserRegisterRequest{
	string loginGateToken = 1;
	string loginToken = 2;
	string username = 3;
	string password = 4;
}
message UserRegisterResponse{
	string loginGateToken = 1;
	string loginToken = 2;
	int32 resultCode = 3;
	string resultMsg = 4;
}

//登录
message UserLoginRequest{
	string loginGateToken = 1;
	string loginToken = 2;
	string username = 3;
	string password = 4;
}
message UserLoginResponse{
	string loginGateToken = 1;
	string loginToken = 2;
	int32 resultCode = 3;
	string resultMsg = 4;
	string sessionId = 5;
}






//角色创建
message CharacterCreateRequest{
	string name = 1;
	int32 jobType = 2;
}
message CharacterCreateResponse{
	bool success = 1;
	string message = 2;
	HS.Protobuf.SceneEntity.NetActor character = 3;
}

// 查询角色列表的请求
message CharacterListRequest{
}
message CharacterListResponse{
	repeated HS.Protobuf.SceneEntity.NetActor characterList = 1;
}
// 删除角色的请求
message CharacterDeleteRequest{
	int32 characterId = 1;
}
message CharacterDeleteResponse{
	bool success = 1;
	string message = 2;
}

//重连请求
message ReconnectRequest{
	string sessionId = 1;
}
message  ReconnectResponse{
	bool success = 1;
	int32 entityId = 2;//重连的角色，0代表为选择角色
}

//退出游戏
message ExitRequest{

}
message ExitResponse{

}

//重新选择角色


//重新登录





//============================================公告==========================================
message KillRankingListItem{
	string chrName = 1;
	int64 killCount = 2;
}

message ServerInfoRequest{
	
}

message ServerInfoResponse{
	int32 OnlinePlayerCount = 1;
	int32 UserCount = 2;
	repeated KillRankingListItem killRankingList = 3;
}